more overflow fix

--- a/src/input.css
+++ b/src/input.css
@@ -367,8 +367,7 @@ a[target="_blank"]:after {
 @tailwind utilities;
 
 @layer base {
-  body,
-  html {
+  body {
     @apply m-0 overflow-hidden w-full;
   }
   body {
